tests/negative/Internal/LhsTooManyPatterns.juvix
module LhsTooManyPatterns;

type T :=
  | A : T;

f : T → T
  | A x := A;
